<resources>
    <string name="app_name">TeamExpenses</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_list_label">Account List</string>
    <string name="account_name_label">Name</string>
    <string name="account_desc_label">Description</string>
    <string name="account_currency_label">Currency</string>
    <string name="initial_balance_label">Initial Balance</string>
    <string name="default_label">Default</string>
    <string name="default_hint">Make this the default account</string>
    <string name="add_members_label">Add Members</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="default_label_text">Delete</string>
    <string name="account_list_fragment_title">Account</string>
    <string name="save_label">Save</string>
    <string name="no_account_label">There are no accounts.</string>
    <string name="add_account_label">+Account</string>
    <string name="summary_button">Summary</string>
    <string name="transaction_button">Transactions</string>
    <string name="add_income_button">+Income</string>
    <string name="add_expense_button">+Expense</string>
    <string name="current_balance_label">Current Balance</string>
    <string name="default_value_label">2000.00</string>
    <string name="month_balance_label">This Month Balance</string>
    <string name="month_income_label">This Month Income</string>
    <string name="year_to_date_income_label">Year To Date Income</string>
    <string name="week_income_label">This Week Income</string>
    <string name="week_expense_label">This Week Expense</string>
    <string name="month_expense_label">This Month Expense</string>
    <string name="year_to_date_expense_label">Year To Date Expense</string>
    <string name="today_expense_label">Today Expense</string>
    <string name="account_balance_label">Account Balance</string>
    <string name="account_edit_label">Edit</string>
    <string name="amount_label">Amount</string>
    <string name="payName">Pay</string>
    <string name="category_label">Category</string>
    <string name="pay_method_label">Payment Method</string>
    <string name="Added_by_label">Added by</string>
    <string name="description_label">Description</string>
    <string name="type_income">I</string>
    <string name="type_expense">E</string>
    <string name="type_transfer">ET</string>
    <string name="type_exp_label">EXPENSE</string>
    <string name="type_income_label">INCOME</string>
    <string name="payer_label">Payer</string>
    <string name="payee_label">Payee</string>
    <string name="default_date_text">29-Jun 2019 7:20 am</string>
    <string name="app_title">Team Expenses</string>
    <string name="hint_account_name">Eg: Personal Account</string>
    <string name="err_msg_account_name_empty">Please enter a Name for your account</string>
    <string name="initial_transaction_label">Initial Balance in Account</string>
    <string name="alert_dialog_default_permission_text">Make this as your Default Account?\"</string>
    <string name="alert_dialog_set_default_title">Set Default</string>
    <string name="alert_dialog_msg_text_mail">Please check your mailbox.</string>
    <string name="alert_title_mail">Mail sent</string>
    <string name="hint_account_description">Eg: This is my Home expenses account</string>
    <string name="hint_bal_0">0</string>
    <string name="uncategory_label">Uncategorized</string>
    <string name="total_income_label">Today Income</string>
    <string name="logout">Logout</string>
    <string name="members_list_label">Members</string>
    <string name="member_name_label">Name</string>
    <string name="member_phone_label">Mobile:</string>
    <string name="member_email_label">Email Address:</string>
    <string name="member_address_label">Address</string>
    <string name="member_role">ROLE</string>
    <string name="change_passwd_button">Change Password</string>
    <string name="old_passwd_label">Old Password</string>
    <string name="new_passwd_label">New Password</string>
    <string name="confirm_passwd_label">Confirm Password</string>
    <string name="members_label">Members</string>
    <string name="role_admin">ADMIN</string>
    <string name="transfer_income_button"><![CDATA[<->Transfer]]></string>
    <string name="admin_label">ADMIN</string>
    <string name="To_name_label">Transfer To</string>
    <string name="category_income">Income</string>
    <string name="category_transfer">Account Transfer</string>
    <string name="category_un">UnCategorized</string>
    <string name="type_transfer_label">Transfer</string>
    <string name="account_label">Account</string>
    <string name="Filter">Filter Transactions</string>
    <string name="all_transactions">All Transactions</string>
    <string name="member_transactions">Member</string>
    <string name="today_transactions">Today</string>
    <string name="yearly_transactions">Yearly</string>
    <string name="monthly_transactions">Monthly</string>
    <string name="weekly_transactions">Weekly</string>
    <string name="expense_transactions">Expense </string>
    <string name="income_transactions">Income</string>
    <string name="account_transfers">Account Transfers</string>
    <string-array name="currency_array">
        <item>INR</item>
        <item>Dollar</item>
        <item>Pound</item>
    </string-array>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_reminder">Reminder</string>
    <string name="new_user_email_subject">Welcome to Team Expenses-Track your expenses for free</string>
    <string name="menu_profile">Profile</string>
    <string name="set_password">Set Password</string>
    <string name="facebook_app_id">660597487682365</string>
    <string name="fb_login_protocol_scheme">fb660597487682365</string>
    <string name="web_client_id">541393111812-0rtguglbv2reet3rj50qd565jphodcml.apps.googleusercontent.com</string>
    <string name="forget_passwd"><u>Forget Password</u></string>
    <string name="loginLabel">Login</string>
    <string name="RegisterLink"><u>Register</u></string>
    <string name="RegisterLabel">Create Account</string>
    <string name="LoginLink"><u>Login</u></string>
    <string name="phone_ver">Verification</string>
    <string name="page_type_login">L</string>
    <string name="alert_dialog_set_delete_title">Delete?</string>
    <string name="alert_dialog_delete_permission_text">Are you sure you want to delete this account?</string>
    <string name="account_To_label">To Account</string>
    <string name="alert_dialog_delete_permission_text_transaction">Are you sure you want to delete this transaction?</string>
    <string name="total_expense_label">Total Expense</string>
    <string name="summary">Summary</string>
    <string name="balance_label">Balance</string>
    <string name="expense_label">Expense</string>
    <string name="income_label">Income</string>
    <string name="acct_label">Account</string>
    <string name="registration_email">Hi, Welcome to Team Expenses!</string>
    <string name="alert_dialog_set_member_delete_title">Member not Deleted</string>
    <string name="alert_dialog_default_member_del_msg__text">The member email id is invalid.</string>
    <string name="alert_dialog_default_member_del_msg_text">Member has not been added. The email id of the member is invalid.Please enter vailid mobile num or email id of the member.</string>
    <string name="alert_dialog_default_member_del_msg_empty_text">Member has not been added.Please enter either email id or mobile num of the member.</string>
    <string name="alert_dialog_default_member_del_msg_ph_err_text">Member has not been added.Member phone number added is invalid.Please enter atleat correct email id or phone number.</string>
    <string name="show_members_label">Show</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="alert_dialog_set_member_not_added">Member is not added</string>
    <string name="alert_dialog_default_member_added_acct">This member is already added in account</string>
    <string name="export">Export As PDF</string>
    <string name="refresh_button">Refresh</string>
    <string name="Password_eye">Show/Hide Password</string>
    <string name="type_incomeTransfer">IT</string>
    <string name="address">Address</string>
    <string name="transaction">Transaction</string>
    <string name="member_name">Member name</string>
    <string name="admin">ADMIN</string>
    <string name="delete">Delete</string>
</resources>