<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/acct_name_label"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:maxLength="20"
        android:text="@string/acct_label" />

    <TextView
        android:id="@+id/income_label"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:maxLength="20"
        android:text="@string/income_label" />
    <TextView
        android:id="@+id/expense_label"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:maxLength="20"
        android:text="@string/expense_label" />
    <TextView
        android:id="@+id/account_balance_label"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:maxLength="20"
        android:text="@string/balance_label" />
</LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/summary_list_recycler_view"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="match_parent"/>


</LinearLayout>