<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:theme="@style/TextViewRecyclerView"
   >

    <TextView
            android:id="@+id/member_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLength="15"
            android:text="@string/member_name" />

    <TextView
        android:id="@+id/member_role"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:text="@string/admin" />

        <ImageButton
            android:id="@+id/member_del_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:contentDescription="@string/delete"
            android:background="#0000"

            android:src="@drawable/ic_del" />
</LinearLayout>